add css styling

--- a/output/style.css
+++ b/output/style.css
@@ -52,7 +52,7 @@
     text-decoration: underline;
   }
   
-  /* Font Awesome Icons color */
+  /* Awesome Font  Icons color */
   .fas {
     color: #4CAF50; /* Green color for the icons */
   }
